@@ -63,7 +63,7 @@ AuthMsgWindow::AuthMsgWindow(QWidget *parent)
     connect(backend, SIGNAL(readyReadStandardOutput()), this, SLOT(readresult()));
     //show reauthenticate button when authenticate fail
     connect(backend,SIGNAL(finished(int)),this,SLOT(changeButton(int)));
-    exitMTH = new QProcess(this);
+    exitMTH = new QProcess(this); /*process to exit mentohust */
 
 }
 
@@ -171,15 +171,6 @@ void AuthMsgWindow::readresult()
     if(this->isHidden()&&trayMsg)showMessage();
 
 }
-void AuthMsgWindow::readresultend()
-{
-    QTextCodec *data = QTextCodec::codecForName("UTF-8");
-    QString result = data->toUnicode(exitMTH->readAllStandardOutput());
-    std::cout << qPrintable(result);
-    authMsg->append(result.trimmed()); //delete the whitespace from the start and the end
-    if(this->isHidden()&&trayMsg)showMessage();
-
-}
 
 void AuthMsgWindow::setArgs(const QString &id, const QString &pd)
 {
@@ -194,8 +185,6 @@ void AuthMsgWindow::setArgs(const QString &id, const QString &pd)
 void AuthMsgWindow::exitClicked()
 {
     exitMTH->start(*backendName,QStringList()<<"-k");
-    exitMTH->setProcessChannelMode(QProcess::MergedChannels);
-    connect(exitMTH, SIGNAL(readyReadStandardOutput()), this, SLOT(readresultend()));
 
     if(exitMTH->waitForFinished(-1)&&backend->waitForFinished(-1))close();
 }
