@@ -1,3 +1,6 @@
+Dec/10/2012
+  1. fix a bug that could not sent exit signal to the server
+  
 Nov/12/2012
   1. use qtsingleapplication to implement single instance
   2. use trimmed() in authMsg to delete the whitespace from the start and the end, so that there won't be many spaceline in authmsgwindow
